--- a/ImprovedWorld/localization/russian/countries/iw_pol_country_l_russian.yml
+++ b/ImprovedWorld/localization/russian/countries/iw_pol_country_l_russian.yml
@@ -9,6 +9,6 @@
  dyn_c_POL_soviet_adj:0 "Польск"
 
  dyn_c_POL_RUS_monarchy:0 "Польское Царство"
- dyn_c_POL_RUS_monarchy_adj "Польск"
+ dyn_c_POL_RUS_monarchy_adj:0 "Польск"
  dyn_c_POL_RUS_soviet:0 "Польская ССР"
  dyn_c_POL_RUS_soviet_adj:0 "Польск"
