--- a/ImprovedWorld/localization/russian/countries/iw_est_country_l_russian.yml
+++ b/ImprovedWorld/localization/russian/countries/iw_est_country_l_russian.yml
@@ -1,7 +1,7 @@
 ﻿l_russian:
  dyn_c_EST:0 "Эстония"
  dyn_c_EST_adj:0 "Эстонск"
- dyn_c_EST_monarchy:0 "Эстонское Герцегство"
+ dyn_c_EST_monarchy:0 "Эстонское Герцогство"
  dyn_c_EST_monarchy_adj:0 "Эстонск"
  dyn_c_EST_republic:0 "Эстонская Республика"
  dyn_c_EST_republic_adj:0 "Эстонск"
@@ -9,6 +9,6 @@
  dyn_c_EST_soviet_adj:0 "Эстонск"
 
  dyn_c_EST_RUS_monarchy:0 "Эстляндское Княжество"
- dyn_c_EST_RUS_monarchy_adj "Эстонск"
+ dyn_c_EST_RUS_monarchy_adj:0 "Эстонск"
  dyn_c_EST_RUS_soviet:0 "Эстонская ССР"
  dyn_c_EST_RUS_soviet_adj:0 "Эстонск"
