--- a/ImprovedWorld/localization/russian/countries/iw_lat_country_l_russian.yml
+++ b/ImprovedWorld/localization/russian/countries/iw_lat_country_l_russian.yml
@@ -1,7 +1,7 @@
 ﻿l_russian:
  dyn_c_LAT:0 "Латвия"
  dyn_c_LAT_adj:0 "Латвийск"
- dyn_c_LAT_monarchy:0 "Латвийское Герцегство"
+ dyn_c_LAT_monarchy:0 "Латвийское Герцогство"
  dyn_c_LAT_monarchy_adj:0 "Латвийск"
  dyn_c_LAT_republic:0 "Латвийская Республика"
  dyn_c_LAT_republic_adj:0 "Латвийск"
@@ -9,6 +9,6 @@
  dyn_c_LAT_soviet_adj:0 "Латвийск"
 
  dyn_c_LAT_RUS_monarchy:0 "Лифляндское Княжество"
- dyn_c_LAT_RUS_monarchy_adj "Лифляндск"
+ dyn_c_LAT_RUS_monarchy_adj:0 "Лифляндск"
  dyn_c_LAT_RUS_soviet:0 "Латвийская ССР"
  dyn_c_LAT_RUS_soviet_adj:0 "Латвийск"
