--- a/ImprovedWorld/localization/russian/countries/iw_lit_country_l_russian.yml
+++ b/ImprovedWorld/localization/russian/countries/iw_lit_country_l_russian.yml
@@ -9,6 +9,6 @@
  dyn_c_LIT_soviet_adj:0 "Литовск"
 
  dyn_c_LIT_RUS_monarchy:0 "Княжество Литовское"
- dyn_c_LIT_RUS_monarchy_adj "Литовск"
+ dyn_c_LIT_RUS_monarchy_adj:0 "Литовск"
  dyn_c_LIT_RUS_soviet:0 "Литовская ССР"
  dyn_c_LIT_RUS_soviet_adj:0 "Литовск"
